<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:id="@+id/functionPad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".12" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:hint="0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".12" >

                <Button
                    android:id="@+id/buttonClear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:text="@string/buttonClear"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/buttonDivide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/buttonDivide"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/buttonMultiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/buttonMultiply"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".12" >

                <Button
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/button7"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/button8"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/button9"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/buttonSubtract"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/buttonSubtract"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".12" >

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/button4"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/button5"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/button6"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/buttonAdd"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".24"
                android:baselineAligned="false" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".75"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/linearLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".50"
                        android:textSize="25sp" >

                        <Button
                            android:id="@+id/button1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".33"
                            android:text="@string/button1"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".33"
                            android:text="@string/button2"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".34"
                            android:text="@string/button3"
                            android:textSize="25sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".50" >

                        <Button
                            android:id="@+id/button0"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".66"
                            android:text="@string/button0"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/buttonDecimalPoint"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".34"
                            android:text="@string/buttonDecimalPoint"
                            android:textSize="25sp" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/buttonEquals"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:text="@string/buttonEquals"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".12"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".34"
                    android:text="@string/buttonSine"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/buttonCosine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".34"
                    android:text="@string/buttonCosine"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/buttonTangent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".34"
                    android:text="@string/buttonTangent"
                    android:textSize="25sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_calculator_view"
        app:menu="@menu/activity_calculator_drawer" />

</android.support.v4.widget.DrawerLayout>
